Fixed view on mobile;

--- a/src/assets/styles/contact.css
+++ b/src/assets/styles/contact.css
@@ -8,19 +8,23 @@
     color: #1611F2;
     font-size: 34px;
 }
+
 .icon-box {
     display: flex;
     margin: auto;
-    justify-content: space-between;
+    justify-content: center;
     margin-bottom: 200px;
 }
+
 .icon {
     margin: 0 10px;
 }
+
 .icon-link {
     text-decoration: none;
     color: inherit;
 }
+
 .icon-link:visited {
     text-decoration: none;
     color: inherit;
